k8s/restaurant-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restaurant-service
  namespace: skydish
  labels:
    app: restaurant-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: restaurant-service
  template:
    metadata:
      labels:
        app: restaurant-service
    spec:
      containers:
        - name: restaurant-service
          image: khairynnnio/restaurant-service:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 5002
          volumeMounts:
            - name: uploads
              mountPath: /app/uploads
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            tcpSocket:
              port: 5002
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 5002
            initialDelaySeconds: 20
            periodSeconds: 20
      volumes:
        - name: uploads
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: restaurant-service
  namespace: skydish
spec:
  selector:
    app: restaurant-service
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
  type: ClusterIP
